# touhou-ai

./: .gitignore  Cargo.toml  README.md  games  loop.sh  main.py  th2 font ss.xcf  win_ss
.github/workflows/: rust.yml
images/: life.xcf  text_box.xcf  th2 font.xcf
src/: arena.rs  main.rs  net.rs
src/net/: dfdx.rs  juice.rs  mod.rs  neuronika.rs
