[package]
name = "touhou-ai"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
device_query = "1.1.2" #gets pressed keys
enigo = "0.0.14" # presses keys
image = "0.24.5"
imageproc = "0.23.0" #finds subimage
scrap = "0.5.0"
screenshots = "0.5.2" #takes screenshot
show-image = "0.13.1"
xcb = "1.2.0"
