[package]
name = "touhou-ai"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
coaster = {path = "../math/juice/coaster"}
# device_query = "1.1.2" #gets pressed keys
enigo = "0.0.14" # presses keys
image = "0.24.5" # Loads files
imageproc = "0.23.0" #finds subimage
juice = {path = "../math/juice/juice"}
#mushin = "0.5.0"
#ndarray = "0.15.6"
#neuronika = "0.2.0"
screenshots = "0.5.2" #takes screenshot
xcb = "1.2.0" # finds active window
