[package]
name = "touhou-ai"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1", features = ["derive"] }
cudarc = "0.9.14"
#bincode = "1.3.3"
#coaster = {path = "../math/juice/coaster"}
device_query = "1.1.2" #gets pressed keys
# dfdx = {path="../../ai/dfdx", features = ["nightly", "numpy", "cuda"]}
dfdx = {git = "https://github.com/coreylowman/dfdx.git" , branch="main", features = ["nightly", "numpy", "cuda"]}
enigo = "0.0.14" # presses keys
image = "0.24.5" # Loads and saves images
once_cell = "1.18.0"
#juice = {path = "../math/juice/juice"}
#mushin = "0.5.0"
#ndarray = "0.15.6"
#neuronika = {path = "../neuronika", features=["serialize"]}
rand = "0.8"
screenshots = "0.5.2" #takes screenshot
serde = { version = "1.0.155", features = ["derive"] }
serde_json = "1.0.104"
xcb = "1.2.0" # finds active window
[toolchain]
channel = "nightly"